--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>젤리아니즘 (Jellianism) - 해저의 영원</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
+    <div id="cursor"></div>
     <div id="loading-screen">
         <div class="loader"></div>
         <p>심해 성소 접속 중...</p>
@@ -25,6 +27,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#doctrine">Doctrine</a></li>
                 <li><a href="#hierarchy">Hierarchy</a></li>
+                <li><a href="#events">Events</a></li>
                 <li><a href="#rituals">Rituals</a></li>
                 <li><a href="#join" class="join-btn">JOIN</a></li>
             </ul>
@@ -77,25 +80,36 @@
         <section id="doctrine" class="section-pad">
             <h2 class="section-title text-center">핵심 교리 <span class="sub-title">Doctrine</span></h2>
             <div class="container grid-3">
-                <div class="card glass-panel">
+                
+                <div class="card glass-panel floating-slow">
+                    <div class="card-visual-container center-align">
+                        <img src="image/goal.png" alt="영원성의 체화 이미지" class="bioluminescent-img card-img">
+                    </div>
                     <h3>1. 영원성의 체화</h3>
-                    <p>유한한 인간에서 영원한 젤리 질감으로 나아가는 것이 목표입니다.</p>
+                    <p>우리의 목표는 단순한 믿음이 아닙니다. 불안하고 유한한 인간의 육체를 넘어, 매 순간 영원자의 투명하고 재생 가능한 젤리 질감을 닮아가는 과정 그 자체입니다.</p>
                 </div>
-                <div class="card glass-panel">
-                     <div class="texture-comparison">
+                
+                <div class="card glass-panel floating">
+                    <h3>2. 질감의 윤리</h3>
+                    <p>당신의 영혼은 어떤 밀도를 가졌습니까?</p>
+                    <ul style="text-align: left; display: inline-block; margin-top: 1rem;">
+                        <li><strong>善 (젤리):</strong> 속이 투명하게 꽉 찬 고밀도의 상태. 영원과 실속의 상징입니다.</li>
+                        <li><strong>惡 (해면체):</strong> 구멍이 숭숭 뚫린 상태. 그 빈 공간은 세속적 욕망과 공허함으로 가득 차 결국 부패합니다.</li>
+                        <li>(※노란색 네모 캐릭터를 조심하십시오.※)</li>
+                    </ul>
+
+                    <div class="texture-comparison" style="margin-top: 2rem;">
                         <img src="image/jelly.png" alt="좋은 젤리 질감" class="texture-img good">
                         <img src="image/sponge.png" alt="나쁜 스펀지 질감" class="texture-img bad">
                     </div>
-                    <h3>2. 질감의 윤리</h3>
-                    <p>당신의 영혼은 어떤 밀도를 가졌습니까?</p>
-                    <ul>
-                        <li><strong>善 (젤리):</strong> 속이 투명하게 꽉 찬 고밀도의 상태. 영원과 실속의 상징입니다.</li>
-                        <li><strong>惡 (해면체):</strong> 구멍이 숭숭 뚫린 상태. 그 빈 공간은 세속적 욕망과 공허함으로 가득 차 결국 부패합니다. (※ 노란색 네모 캐릭터를 멀리하십시오.)</li>
-                    </ul>
                 </div>
-                <div class="card glass-panel">
+
+                <div class="card glass-panel floating-slower">
+                    <div class="card-visual-container center-align">
+                        <img src="image/medic.png" alt="순환 의학 이미지" class="bioluminescent-img card-img">
+                    </div>
                     <h3>3. 재생과 순환 의학</h3>
-                    <p>영원자의 독을 과학적으로 연구하여 '순환 의학'으로 확장합니다.</p>
+                    <p>영원자의 맹독은 우리에게 내리는 가장 큰 축복이자 시련입니다. 해저 도시는 이 신성한 독을 기반으로 죽음을 극복하는 '순환 의학'을 완성해 나갑니다.</p>
                 </div>
             </div>
         </section>
@@ -120,6 +134,46 @@
                     <h3>CANDY (캔디)</h3>
                     <p class="role">일반 표류자 (초기 신앙)</p>
                     <p class="desc">아직 불투명한 의복을 입고 영원을 동경하는 자들. 이제 막 표류를 시작했습니다.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="events" class="section-pad">
+            <h2 class="section-title text-center">주요 행사 <span class="sub-title">Events & Festivals</span></h2>
+            <div class="container grid-4"> <div class="event-card glass-panel floating-slow">
+                    <div class="card-visual-container">
+                        <img src="image/circle.png" alt="대순환의 날 축제 이미지" class="bioluminescent-img card-img">
+                    </div>
+                    <h4>대(大)순환의 날</h4>
+                    <p>해저 도시 소등 후, 부력 장치로 수면을 향해 떠오르는 연례 최대 축제.</p>
+                    <span class="hashtag">#GreatCycleDay</span>
+                </div>
+
+                <div class="event-card glass-panel floating">
+                    <div class="card-visual-container">
+                        <img src="image/ccc.png" alt="젤리 축성식 이미지" class="bioluminescent-img card-img">
+                    </div>
+                    <h4>젤리 축성식</h4>
+                    <p>새로운 촉수 탄생 시, 성스러운 젤리를 나누고 촉수 의복을 하사.</p>
+                    <span class="hashtag">#NewTentacle #JellyFashion</span>
+                </div>
+
+                <div class="event-card glass-panel floating-slower">
+                    <div class="card-visual-container">
+                        <img src="image/drift.png" alt="표류 대회 이미지" class="bioluminescent-img card-img">
+                    </div>
+                    <h4>표류 챔피언십</h4>
+                    <p>가장 오랫동안 평온하게 '멍'을 유지하는 진정한 표류자를 가리는 대회.</p>
+                    <span class="hashtag">#DriftChampion #표류인증</span>
+                </div>
+
+                <div class="event-card glass-panel floating-slow">
+                    <div class="card-visual-container">
+                        <img src="image/spo.png" alt="스펀지 잡기 행사 이미지" class="bioluminescent-img card-img">
+                    </div>
+                    <h4>스펀지 잡기</h4>
+                    <p>속이 빈 이단의 상징(해면체)을 두드려 쫓아내는 즐거운 정화 의식.</p>
+                    <span class="hashtag">#SpongeHunt #해면체추방</span>
                 </div>
             </div>
         </section>
@@ -149,7 +203,7 @@
     </main>
 
     <footer>
-        <p>© 20XX Jellianism. Neo-Atlantis, Abyssal District.</p>
+        <p>© 2121 Jellianism. Neo-Atlantis, Abyssal District.</p>
     </footer>
 
     <audio id="bg-music" loop>
